# jslapp

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: app_config.rs
src/frontend/: app.rs  mod.rs
src/frontend/components/: header.rs
src/frontend/pages/: about.rs  home.rs
src/frontend/styles/: main.css
src/server/: errors.rs  mod.rs
src/server/handlers/api/: health.rs
src/server/routes/: api.rs
