[package]
name = "jslapp"
version = "0.1.0"
edition = "2021"

[features]
ssr = []

[dependencies]
# General
chrono = "0.4"

# Server
axum = { version = "*", features = ["macros"] }
hyper = { version = "*", features = ["server"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Frontend
leptos = { version = "0.5", features = ["csr"] }
leptos_axum = "0.5"
leptos_meta = "0.5"
leptos_router = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tokio-test = "0.4"
pretty_assertions = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
